--- a/static/resources/health/diseases.ipynb
+++ b/static/resources/health/diseases.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = os.path.join('demographics','regions.csv')\n",
+    "file = os.path.join('..','demographics','regions.csv')\n",
     "regions_df = pd.read_csv(file)"
    ]
   },
@@ -71,78 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Non-communicable diseases (NCDs) (DALYs lost)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>6.948558e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>ALB</td>\n",
-       "      <td>6.276270e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>DZA</td>\n",
-       "      <td>7.036442e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>ASM</td>\n",
-       "      <td>1.223452e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>AND</td>\n",
-       "      <td>1.682923e+04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Code  Non-communicable diseases (NCDs) (DALYs lost)\n",
-       "27   AFG                                   6.948558e+06\n",
-       "55   ALB                                   6.276270e+05\n",
-       "83   DZA                                   7.036442e+06\n",
-       "111  ASM                                   1.223452e+04\n",
-       "167  AND                                   1.682923e+04"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gbds = pd.read_csv('total-disease-burden-by-cause.csv')\n",
     "gbds = gbds.loc[gbds['Year']==2017]\n",
@@ -160,78 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Respiratory diseases (DALYs lost)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>359121.716381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>ALB</td>\n",
-       "      <td>25151.250839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>DZA</td>\n",
-       "      <td>330359.109288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>ASM</td>\n",
-       "      <td>854.183539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>AND</td>\n",
-       "      <td>926.955330</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Code  Respiratory diseases (DALYs lost)\n",
-       "27   AFG                      359121.716381\n",
-       "55   ALB                       25151.250839\n",
-       "83   DZA                      330359.109288\n",
-       "111  ASM                         854.183539\n",
-       "167  AND                         926.955330"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ncds2 = pd.read_csv('burden-of-disease-by-ncds.csv')\n",
     "ncds2 = ncds2.loc[ncds2['Year']==2017]\n",
@@ -242,91 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Non-communicable diseases (NCDs) (DALYs lost)</th>\n",
-       "      <th>Respiratory diseases (DALYs lost)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>6.948558e+06</td>\n",
-       "      <td>359121.716381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ALB</td>\n",
-       "      <td>6.276270e+05</td>\n",
-       "      <td>25151.250839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DZA</td>\n",
-       "      <td>7.036442e+06</td>\n",
-       "      <td>330359.109288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ASM</td>\n",
-       "      <td>1.223452e+04</td>\n",
-       "      <td>854.183539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AND</td>\n",
-       "      <td>1.682923e+04</td>\n",
-       "      <td>926.955330</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Code  Non-communicable diseases (NCDs) (DALYs lost)  \\\n",
-       "0  AFG                                   6.948558e+06   \n",
-       "1  ALB                                   6.276270e+05   \n",
-       "2  DZA                                   7.036442e+06   \n",
-       "3  ASM                                   1.223452e+04   \n",
-       "4  AND                                   1.682923e+04   \n",
-       "\n",
-       "   Respiratory diseases (DALYs lost)  \n",
-       "0                      359121.716381  \n",
-       "1                       25151.250839  \n",
-       "2                      330359.109288  \n",
-       "3                         854.183539  \n",
-       "4                         926.955330  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "diseases_df = pd.merge(ncds, resps, on=['Code'], how='inner')\n",
     "diseases_df.head()"
@@ -334,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,69 +178,6 @@
     "#         pass\n",
     "    \n",
     "# beds_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Endless Medical API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"status\":\"ok\"}\n"
-     ]
-    }
-   ],
-   "source": [
-    "url = \"https://endlessmedicalapi1.p.rapidapi.com/AcceptTermsOfUse\"\n",
-    "\n",
-    "querystring = {\"SessionID\":\"73d9F8qEUGp1v4oQ\",\"passphrase\":\"I have read, understood and I accept and agree to comply with the Terms of Use of EndlessMedicalAPI and Endless Medical services. The Terms of Use are available on endlessmedical.com\"}\n",
-    "\n",
-    "payload = \"\"\n",
-    "headers = {\n",
-    "    'x-rapidapi-host': \"endlessmedicalapi1.p.rapidapi.com\",\n",
-    "    'x-rapidapi-key': \"8cc177b195msh4e4f4ff4e0cae0fp10ed89jsn60e0207e5c4d\",\n",
-    "    'content-type': \"application/x-www-form-urlencoded\"\n",
-    "    }\n",
-    "\n",
-    "response = requests.request(\"POST\", url, data=payload, headers=headers, params=querystring)\n",
-    "\n",
-    "print(response.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"status\":\"ok\",\"SessionID\":\"5boc0h0qaGnNlenP\"}\n"
-     ]
-    }
-   ],
-   "source": [
-    "url = \"https://endlessmedicalapi1.p.rapidapi.com/InitSession\"\n",
-    "\n",
-    "headers = {\n",
-    "    'x-rapidapi-host': \"endlessmedicalapi1.p.rapidapi.com\",\n",
-    "    'x-rapidapi-key': \"8cc177b195msh4e4f4ff4e0cae0fp10ed89jsn60e0207e5c4d\"\n",
-    "    }\n",
-    "\n",
-    "response = requests.request(\"GET\", url, headers=headers)\n",
-    "\n",
-    "print(response.text)"
    ]
   },
   {
