refactor, update data

--- a/static/resources/cases/all.ipynb
+++ b/static/resources/cases/all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,9 +84,6 @@
        "      <th>1/30/20</th>\n",
        "      <th>1/31/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>4/5/20</th>\n",
-       "      <th>4/6/20</th>\n",
-       "      <th>4/7/20</th>\n",
        "      <th>4/8/20</th>\n",
        "      <th>4/9/20</th>\n",
        "      <th>4/10/20</th>\n",
@@ -94,6 +91,9 @@
        "      <th>4/12/20</th>\n",
        "      <th>4/13/20</th>\n",
        "      <th>4/14/20</th>\n",
+       "      <th>4/15/20</th>\n",
+       "      <th>4/16/20</th>\n",
+       "      <th>4/17/20</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country_Region</th>\n",
@@ -134,9 +134,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>349</td>\n",
-       "      <td>367</td>\n",
-       "      <td>423</td>\n",
        "      <td>444</td>\n",
        "      <td>484</td>\n",
        "      <td>521</td>\n",
@@ -144,10 +141,13 @@
        "      <td>607</td>\n",
        "      <td>665</td>\n",
        "      <td>714</td>\n",
+       "      <td>784</td>\n",
+       "      <td>840</td>\n",
+       "      <td>906</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 84 columns</p>\n",
+       "<p>1 rows × 87 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -155,18 +155,18 @@
        "Country_Region                                                                  \n",
        "Afghanistan           0        0        0        0        0        0        0   \n",
        "\n",
-       "                1/29/20  1/30/20  1/31/20  ...  4/5/20  4/6/20  4/7/20  \\\n",
-       "Country_Region                             ...                           \n",
-       "Afghanistan           0        0        0  ...     349     367     423   \n",
+       "                1/29/20  1/30/20  1/31/20  ...  4/8/20  4/9/20  4/10/20  \\\n",
+       "Country_Region                             ...                            \n",
+       "Afghanistan           0        0        0  ...     444     484      521   \n",
        "\n",
-       "                4/8/20  4/9/20  4/10/20  4/11/20  4/12/20  4/13/20  4/14/20  \n",
-       "Country_Region                                                               \n",
-       "Afghanistan        444     484      521      555      607      665      714  \n",
+       "                4/11/20  4/12/20  4/13/20  4/14/20  4/15/20  4/16/20  4/17/20  \n",
+       "Country_Region                                                                 \n",
+       "Afghanistan         555      607      665      714      784      840      906  \n",
        "\n",
-       "[1 rows x 84 columns]"
+       "[1 rows x 87 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,9 +214,6 @@
        "      <th>1/30/20</th>\n",
        "      <th>1/31/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>4/5/20</th>\n",
-       "      <th>4/6/20</th>\n",
-       "      <th>4/7/20</th>\n",
        "      <th>4/8/20</th>\n",
        "      <th>4/9/20</th>\n",
        "      <th>4/10/20</th>\n",
@@ -224,6 +221,9 @@
        "      <th>4/12/20</th>\n",
        "      <th>4/13/20</th>\n",
        "      <th>4/14/20</th>\n",
+       "      <th>4/15/20</th>\n",
+       "      <th>4/16/20</th>\n",
+       "      <th>4/17/20</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country_Region</th>\n",
@@ -268,9 +268,9 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
@@ -290,9 +290,9 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -314,14 +314,14 @@
        "      <td>...</td>\n",
        "      <td>39</td>\n",
        "      <td>39</td>\n",
-       "      <td>39</td>\n",
-       "      <td>39</td>\n",
-       "      <td>39</td>\n",
        "      <td>40</td>\n",
        "      <td>40</td>\n",
        "      <td>43</td>\n",
        "      <td>45</td>\n",
        "      <td>45</td>\n",
+       "      <td>48</td>\n",
+       "      <td>48</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Zimbabwe</th>\n",
@@ -336,9 +336,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>11</td>\n",
        "      <td>11</td>\n",
        "      <td>11</td>\n",
        "      <td>13</td>\n",
@@ -346,6 +343,9 @@
        "      <td>14</td>\n",
        "      <td>17</td>\n",
        "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Global</th>\n",
@@ -360,20 +360,20 @@
        "      <td>8234</td>\n",
        "      <td>9927</td>\n",
        "      <td>...</td>\n",
-       "      <td>1272115</td>\n",
-       "      <td>1345101</td>\n",
-       "      <td>1426096</td>\n",
-       "      <td>1511104</td>\n",
-       "      <td>1595350</td>\n",
-       "      <td>1691719</td>\n",
-       "      <td>1771514</td>\n",
-       "      <td>1846679</td>\n",
-       "      <td>1917319</td>\n",
+       "      <td>1480202</td>\n",
+       "      <td>1563935</td>\n",
+       "      <td>1657526</td>\n",
+       "      <td>1735650</td>\n",
+       "      <td>1834721</td>\n",
+       "      <td>1904838</td>\n",
        "      <td>1976191</td>\n",
+       "      <td>2056054</td>\n",
+       "      <td>2152646</td>\n",
+       "      <td>2240190</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 84 columns</p>\n",
+       "<p>5 rows × 87 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -385,26 +385,26 @@
        "Zimbabwe              0        0        0        0        0        0        0   \n",
        "Global              555      654      941     1434     2118     2927     5578   \n",
        "\n",
-       "                1/29/20  1/30/20  1/31/20  ...   4/5/20   4/6/20   4/7/20  \\\n",
+       "                1/29/20  1/30/20  1/31/20  ...   4/8/20   4/9/20  4/10/20  \\\n",
        "Country_Region                             ...                              \n",
        "Western Sahara        0        0        0  ...        4        4        4   \n",
-       "Yemen                 0        0        0  ...        0        0        0   \n",
-       "Zambia                0        0        0  ...       39       39       39   \n",
-       "Zimbabwe              0        0        0  ...        9       10       11   \n",
-       "Global             6166     8234     9927  ...  1272115  1345101  1426096   \n",
+       "Yemen                 0        0        0  ...        0        0        1   \n",
+       "Zambia                0        0        0  ...       39       39       40   \n",
+       "Zimbabwe              0        0        0  ...       11       11       13   \n",
+       "Global             6166     8234     9927  ...  1480202  1563935  1657526   \n",
        "\n",
-       "                 4/8/20   4/9/20  4/10/20  4/11/20  4/12/20  4/13/20  4/14/20  \n",
+       "                4/11/20  4/12/20  4/13/20  4/14/20  4/15/20  4/16/20  4/17/20  \n",
        "Country_Region                                                                 \n",
-       "Western Sahara        4        4        4        4        6        6        6  \n",
-       "Yemen                 0        0        1        1        1        1        1  \n",
-       "Zambia               39       39       40       40       43       45       45  \n",
-       "Zimbabwe             11       11       13       14       14       17       17  \n",
-       "Global          1511104  1595350  1691719  1771514  1846679  1917319  1976191  \n",
+       "Western Sahara        4        6        6        6        6        6        6  \n",
+       "Yemen                 1        1        1        1        1        1        1  \n",
+       "Zambia               40       43       45       45       48       48       52  \n",
+       "Zimbabwe             14       14       17       17       23       23       24  \n",
+       "Global          1735650  1834721  1904838  1976191  2056054  2152646  2240190  \n",
        "\n",
-       "[5 rows x 84 columns]"
+       "[5 rows x 87 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "      dtype='object', name='Country_Region')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "522325"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "    <tr>\n",
        "      <th>183</th>\n",
        "      <td>Zambia</td>\n",
-       "      <td>45</td>\n",
+       "      <td>52</td>\n",
        "      <td>30.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3/18/20</td>\n",
@@ -667,25 +667,25 @@
        "    <tr>\n",
        "      <th>184</th>\n",
        "      <td>Zimbabwe</td>\n",
-       "      <td>17</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3/20/20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>185</th>\n",
        "      <td>Global</td>\n",
-       "      <td>1976191</td>\n",
-       "      <td>474261.0</td>\n",
-       "      <td>125984.0</td>\n",
+       "      <td>2240190</td>\n",
+       "      <td>568343.0</td>\n",
+       "      <td>153821.0</td>\n",
        "      <td>1/22/20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>186</th>\n",
        "      <td>Global</td>\n",
-       "      <td>3952382</td>\n",
-       "      <td>948538.0</td>\n",
-       "      <td>251968.0</td>\n",
+       "      <td>4480380</td>\n",
+       "      <td>1136687.0</td>\n",
+       "      <td>307642.0</td>\n",
        "      <td>1/22/20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -695,13 +695,13 @@
       "text/plain": [
        "    Country_Region  Confirmed  Recovered  Fatalities First Day\n",
        "182          Yemen          1        NaN         NaN   4/10/20\n",
-       "183         Zambia         45       30.0         2.0   3/18/20\n",
-       "184       Zimbabwe         17        NaN         3.0   3/20/20\n",
-       "185         Global    1976191   474261.0    125984.0   1/22/20\n",
-       "186         Global    3952382   948538.0    251968.0   1/22/20"
+       "183         Zambia         52       30.0         2.0   3/18/20\n",
+       "184       Zimbabwe         24        2.0         3.0   3/20/20\n",
+       "185         Global    2240190   568343.0    153821.0   1/22/20\n",
+       "186         Global    4480380  1136687.0    307642.0   1/22/20"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
