--- a/static/resources/cases/all.ipynb
+++ b/static/resources/cases/all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "[1 rows x 95 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "[5 rows x 95 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,6 +414,333 @@
     "global_row = pd.Series(confirmed_df.sum(), name='Global')\n",
     "confirmed_df = confirmed_df.append(global_row)\n",
     "confirmed_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = ['United States', 'Italy', 'Spain', 'France', 'Germany', 'United Kingdom', 'China', 'Iran']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>1/28/20</th>\n",
+       "      <th>1/29/20</th>\n",
+       "      <th>1/30/20</th>\n",
+       "      <th>1/31/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>4/16/20</th>\n",
+       "      <th>4/17/20</th>\n",
+       "      <th>4/18/20</th>\n",
+       "      <th>4/19/20</th>\n",
+       "      <th>4/20/20</th>\n",
+       "      <th>4/21/20</th>\n",
+       "      <th>4/22/20</th>\n",
+       "      <th>4/23/20</th>\n",
+       "      <th>4/24/20</th>\n",
+       "      <th>4/25/20</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>China</th>\n",
+       "      <td>548</td>\n",
+       "      <td>643</td>\n",
+       "      <td>920</td>\n",
+       "      <td>1406</td>\n",
+       "      <td>2075</td>\n",
+       "      <td>2877</td>\n",
+       "      <td>5509</td>\n",
+       "      <td>6087</td>\n",
+       "      <td>8141</td>\n",
+       "      <td>9802</td>\n",
+       "      <td>...</td>\n",
+       "      <td>83403</td>\n",
+       "      <td>83760</td>\n",
+       "      <td>83787</td>\n",
+       "      <td>83805</td>\n",
+       "      <td>83817</td>\n",
+       "      <td>83853</td>\n",
+       "      <td>83868</td>\n",
+       "      <td>83884</td>\n",
+       "      <td>83899</td>\n",
+       "      <td>83909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>146075</td>\n",
+       "      <td>148084</td>\n",
+       "      <td>148086</td>\n",
+       "      <td>153011</td>\n",
+       "      <td>155393</td>\n",
+       "      <td>158168</td>\n",
+       "      <td>155980</td>\n",
+       "      <td>158303</td>\n",
+       "      <td>159952</td>\n",
+       "      <td>161644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>137698</td>\n",
+       "      <td>141397</td>\n",
+       "      <td>143342</td>\n",
+       "      <td>145184</td>\n",
+       "      <td>147065</td>\n",
+       "      <td>148291</td>\n",
+       "      <td>150648</td>\n",
+       "      <td>153129</td>\n",
+       "      <td>154999</td>\n",
+       "      <td>156513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iran</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>77995</td>\n",
+       "      <td>79494</td>\n",
+       "      <td>80868</td>\n",
+       "      <td>82211</td>\n",
+       "      <td>83505</td>\n",
+       "      <td>84802</td>\n",
+       "      <td>85996</td>\n",
+       "      <td>87026</td>\n",
+       "      <td>88194</td>\n",
+       "      <td>89328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>168941</td>\n",
+       "      <td>172434</td>\n",
+       "      <td>175925</td>\n",
+       "      <td>178972</td>\n",
+       "      <td>181228</td>\n",
+       "      <td>183957</td>\n",
+       "      <td>187327</td>\n",
+       "      <td>189973</td>\n",
+       "      <td>192994</td>\n",
+       "      <td>195351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spain</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>184948</td>\n",
+       "      <td>190839</td>\n",
+       "      <td>191726</td>\n",
+       "      <td>198674</td>\n",
+       "      <td>200210</td>\n",
+       "      <td>204178</td>\n",
+       "      <td>208389</td>\n",
+       "      <td>213024</td>\n",
+       "      <td>219764</td>\n",
+       "      <td>223759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>667592</td>\n",
+       "      <td>699706</td>\n",
+       "      <td>732197</td>\n",
+       "      <td>758809</td>\n",
+       "      <td>784326</td>\n",
+       "      <td>811865</td>\n",
+       "      <td>840351</td>\n",
+       "      <td>869170</td>\n",
+       "      <td>905358</td>\n",
+       "      <td>938154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104145</td>\n",
+       "      <td>109769</td>\n",
+       "      <td>115314</td>\n",
+       "      <td>121172</td>\n",
+       "      <td>125856</td>\n",
+       "      <td>130172</td>\n",
+       "      <td>134638</td>\n",
+       "      <td>139246</td>\n",
+       "      <td>144640</td>\n",
+       "      <td>149569</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 95 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                1/22/20  1/23/20  1/24/20  1/25/20  1/26/20  1/27/20  1/28/20  \\\n",
+       "Country_Region                                                                  \n",
+       "China               548      643      920     1406     2075     2877     5509   \n",
+       "France                0        0        2        3        3        3        4   \n",
+       "Germany               0        0        0        0        0        1        4   \n",
+       "Iran                  0        0        0        0        0        0        0   \n",
+       "Italy                 0        0        0        0        0        0        0   \n",
+       "Spain                 0        0        0        0        0        0        0   \n",
+       "United States         1        1        2        2        5        5        5   \n",
+       "United Kingdom        0        0        0        0        0        0        0   \n",
+       "\n",
+       "                1/29/20  1/30/20  1/31/20  ...  4/16/20  4/17/20  4/18/20  \\\n",
+       "Country_Region                             ...                              \n",
+       "China              6087     8141     9802  ...    83403    83760    83787   \n",
+       "France                5        5        5  ...   146075   148084   148086   \n",
+       "Germany               4        4        5  ...   137698   141397   143342   \n",
+       "Iran                  0        0        0  ...    77995    79494    80868   \n",
+       "Italy                 0        0        2  ...   168941   172434   175925   \n",
+       "Spain                 0        0        0  ...   184948   190839   191726   \n",
+       "United States         5        5        7  ...   667592   699706   732197   \n",
+       "United Kingdom        0        0        2  ...   104145   109769   115314   \n",
+       "\n",
+       "                4/19/20  4/20/20  4/21/20  4/22/20  4/23/20  4/24/20  4/25/20  \n",
+       "Country_Region                                                                 \n",
+       "China             83805    83817    83853    83868    83884    83899    83909  \n",
+       "France           153011   155393   158168   155980   158303   159952   161644  \n",
+       "Germany          145184   147065   148291   150648   153129   154999   156513  \n",
+       "Iran              82211    83505    84802    85996    87026    88194    89328  \n",
+       "Italy            178972   181228   183957   187327   189973   192994   195351  \n",
+       "Spain            198674   200210   204178   208389   213024   219764   223759  \n",
+       "United States    758809   784326   811865   840351   869170   905358   938154  \n",
+       "United Kingdom   121172   125856   130172   134638   139246   144640   149569  \n",
+       "\n",
+       "[8 rows x 95 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_confirmed_df = confirmed_df.loc[confirmed_df.index.isin(countries)]\n",
+    "top_confirmed_df.head(10)"
    ]
   },
   {
@@ -435,12 +762,12 @@
     }
    ],
    "source": [
-    "# Top Countries\n",
-    "n = 9\n",
-    "last_day = confirmed_df.columns[-1]\n",
-    "top_confirmed_df = confirmed_df.nlargest(n, last_day)\n",
-    "top_confirmed_df.drop(index='Global', inplace=True)\n",
-    "top_confirmed_df.index"
+    "# # Top Countries\n",
+    "# n = 9\n",
+    "# last_day = confirmed_df.columns[-1]\n",
+    "# top_confirmed_df = confirmed_df.nlargest(n, last_day)\n",
+    "# top_confirmed_df.drop(index='Global', inplace=True)\n",
+    "# top_confirmed_df.index"
    ]
   },
   {
@@ -721,7 +1048,7 @@
    "outputs": [],
    "source": [
     "# Save JSON\n",
-    "all_df.to_json('all.json', orient='records')"
+    "# all_df.to_json('all.json', orient='records')"
    ]
   },
   {
